--- a/app/src/main/res/layout/activity_compass.xml
+++ b/app/src/main/res/layout/activity_compass.xml
@@ -8,57 +8,86 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/compass"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginStart="1dp"
+        android:layout_marginTop="1dp"
+        android:layout_marginEnd="1dp"
+        android:layout_marginBottom="1dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
+        <ImageView
+            android:id="@+id/circle"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.0"
+            app:srcCompat="@drawable/compass" />
+
+        <ImageView
+            android:id="@+id/house"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            app:layout_constraintCircle="@+id/compass"
+            app:layout_constraintCircleAngle="100"
+            app:layout_constraintCircleRadius="190dp"
+            app:srcCompat="@drawable/house"
+            tools:layout_editor_absoluteX="351dp"
+            tools:layout_editor_absoluteY="339dp" />
+
+        <ImageView
+            android:id="@+id/family"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            app:layout_constraintCircle="@+id/compass"
+            app:layout_constraintCircleAngle="210"
+            app:layout_constraintCircleRadius="190dp"
+            app:srcCompat="@drawable/family"
+            tools:layout_editor_absoluteX="377dp"
+            tools:layout_editor_absoluteY="499dp" />
+
+
+        <ImageView
+            android:id="@+id/needle"
+            android:layout_width="260dp"
+            android:layout_height="260dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.498"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.499"
+            app:srcCompat="@drawable/needle2" />
+
+        <ImageView
+            android:id="@+id/friend"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            app:layout_constraintCircle="@+id/compass"
+            app:layout_constraintCircleAngle="35"
+            app:layout_constraintCircleRadius="190dp"
+            app:srcCompat="@drawable/friend"
+            tools:layout_editor_absoluteX="195dp"
+            tools:layout_editor_absoluteY="197dp" />
+
+        <ImageView
+            android:id="@+id/north"
+            android:layout_width="32dp"
+            android:layout_height="32dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="@+id/circle"
+            app:layout_constraintVertical_bias="0.276"
+            app:srcCompat="@drawable/n" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
-
-    <ImageView
-        android:id="@+id/imageView7"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:srcCompat="@drawable/circle"
-        tools:layout_editor_absoluteX="32dp"
-        tools:layout_editor_absoluteY="205dp" />
-
-    <ImageView
-        android:id="@+id/imageView9"
-        android:layout_width="348dp"
-        android:layout_height="861dp"
-        app:srcCompat="@drawable/needle"
-        tools:layout_editor_absoluteX="38dp"
-        tools:layout_editor_absoluteY="-45dp" />
-
-    <ImageView
-        android:id="@+id/imageView11"
-        android:layout_width="90dp"
-        android:layout_height="60dp"
-        app:srcCompat="@drawable/userIcon"
-        tools:layout_editor_absoluteX="167dp"
-        tools:layout_editor_absoluteY="355dp" />
-
-    <ImageView
-        android:id="@+id/imageView12"
-        android:layout_width="34dp"
-        android:layout_height="48dp"
-        app:srcCompat="@drawable/friendsIcon"
-        tools:layout_editor_absoluteX="195dp"
-        tools:layout_editor_absoluteY="191dp" />
-
-    <ImageView
-        android:id="@+id/imageView14"
-        android:layout_width="34dp"
-        android:layout_height="41dp"
-        app:srcCompat="@drawable/familyIcon"
-        tools:layout_editor_absoluteX="32dp"
-        tools:layout_editor_absoluteY="355dp" />
-
-    <ImageView
-        android:id="@+id/imageView15"
-        android:layout_width="27dp"
-        android:layout_height="94dp"
-        app:srcCompat="@drawable/homeIcon"
-        tools:layout_editor_absoluteX="359dp"
-        tools:layout_editor_absoluteY="338dp" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
