--- a/app/src/main/res/layout/activity_add_locations.xml
+++ b/app/src/main/res/layout/activity_add_locations.xml
@@ -27,7 +27,7 @@
         android:layout_marginEnd="52dp"
         android:ems="10"
         android:hint="Longitude"
-        android:inputType="number"
+        android:inputType="numberDecimal"
         android:textSize="12sp"
         app:layout_constraintEnd_toStartOf="@+id/longitude2_view"
         app:layout_constraintTop_toBottomOf="@+id/textView3" />
@@ -40,7 +40,7 @@
         android:layout_marginEnd="52dp"
         android:ems="10"
         android:hint="Latitude"
-        android:inputType="number"
+        android:inputType="numberDecimal"
         android:textSize="12sp"
         app:layout_constraintEnd_toStartOf="@+id/friend_lat_view"
         app:layout_constraintTop_toBottomOf="@+id/family_long_view" />
@@ -88,7 +88,7 @@
         android:layout_marginEnd="44dp"
         android:ems="10"
         android:hint="Longitude"
-        android:inputType="number"
+        android:inputType="numberDecimal"
         android:textSize="12sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView4" />
@@ -101,7 +101,7 @@
         android:layout_marginEnd="52dp"
         android:ems="10"
         android:hint="Longitude"
-        android:inputType="number"
+        android:inputType="numberDecimal"
         android:textSize="12sp"
         app:layout_constraintEnd_toStartOf="@+id/family_long_view"
         app:layout_constraintTop_toBottomOf="@+id/textView2" />
@@ -138,7 +138,7 @@
         android:layout_marginEnd="52dp"
         android:ems="10"
         android:hint="Latitude"
-        android:inputType="number"
+        android:inputType="numberDecimal"
         android:textSize="12sp"
         app:layout_constraintEnd_toStartOf="@+id/family_lat_view"
         app:layout_constraintTop_toBottomOf="@+id/home_long_view" />
@@ -151,7 +151,7 @@
         android:layout_marginEnd="47dp"
         android:ems="10"
         android:hint="Latitude"
-        android:inputType="number"
+        android:inputType="numberDecimal"
         android:textSize="12sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/longitude2_view" />
