--- a/app/src/main/res/layout/activity_compass.xml
+++ b/app/src/main/res/layout/activity_compass.xml
@@ -88,5 +88,35 @@
             app:layout_constraintVertical_bias="0.276"
             app:srcCompat="@drawable/n" />
 
+        <TextView
+            android:id="@+id/friend_label_view"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="-15dp"
+            android:text=""
+            app:layout_constraintBottom_toBottomOf="@+id/friend"
+            app:layout_constraintEnd_toStartOf="@+id/friend"
+            app:layout_constraintStart_toEndOf="@+id/friend" />
+
+        <TextView
+            android:id="@+id/house_label_view"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="-15dp"
+            android:text=""
+            app:layout_constraintBottom_toBottomOf="@+id/house"
+            app:layout_constraintEnd_toStartOf="@+id/house"
+            app:layout_constraintStart_toEndOf="@+id/house" />
+
+        <TextView
+            android:id="@+id/family_label_view"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="-15dp"
+            android:text=""
+            app:layout_constraintBottom_toBottomOf="@+id/family"
+            app:layout_constraintEnd_toStartOf="@+id/family"
+            app:layout_constraintStart_toEndOf="@+id/family" />
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
