--- a/app/src/main/res/layout/activity_add_locations.xml
+++ b/app/src/main/res/layout/activity_add_locations.xml
@@ -7,6 +7,19 @@
     tools:context=".AddLocationsActivity">
 
     <EditText
+        android:id="@+id/orientation_test"
+        android:layout_width="120dp"
+        android:layout_height="36dp"
+        android:layout_marginTop="28dp"
+        android:ems="10"
+        android:hint="Orientation (testing)"
+        android:inputType="numberSigned|numberDecimal"
+        android:textSize="12sp"
+        app:layout_constraintEnd_toStartOf="@+id/friend_label_view"
+        app:layout_constraintStart_toEndOf="@+id/home_label_view"
+        app:layout_constraintTop_toBottomOf="@+id/family_label_view" />
+
+    <EditText
         android:id="@+id/friend_label_view"
         android:layout_width="74dp"
         android:layout_height="35dp"
