--- a/app/src/main/res/layout/activity_add_friend.xml
+++ b/app/src/main/res/layout/activity_add_friend.xml
@@ -9,7 +9,7 @@
     <TextView
         android:id="@+id/appTitle"
         android:layout_width="fill_parent"
-        android:layout_height="0dp"
+        android:layout_height="80dp"
         android:layout_marginBottom="40dp"
         android:background="@drawable/back"
         android:gravity="center"
@@ -42,10 +42,21 @@
         android:layout_width="wrap_content"
         android:layout_height="0dp"
         android:hint="Enter each UID for friends"
-        app:layout_constraintBaseline_toBottomOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/addFriendSubmitButton"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias=".5"
         app:layout_constraintStart_toStartOf="parent"
-        tools:ignore="TouchTargetSizeCheck"
-        tools:layout_editor_absoluteY="186dp" />
+        tools:ignore="TouchTargetSizeCheck" />
+
+    <Button
+        android:id="@+id/addFriendSubmitButton"
+        android:layout_width="wrap_content"
+        android:layout_height="48dp"
+        android:layout_marginBottom="108dp"
+        android:text="submit"
+        android:textSize="10sp"
+        android:onClick="onAddFriendSubmitBtnClicked"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
