--- a/app/src/main/res/layout/activity_add_friend.xml
+++ b/app/src/main/res/layout/activity_add_friend.xml
@@ -7,56 +7,44 @@
     tools:context=".AddFriendActivity">
 
     <TextView
-        android:id="@+id/appTitle"
-        android:layout_width="fill_parent"
-        android:layout_height="80dp"
-        android:layout_marginBottom="40dp"
-        android:background="@drawable/back"
-        android:gravity="center"
-        android:text="Social Compass 2"
-        android:textSize="24sp"
-        app:layout_constraintBottom_toTopOf="@+id/addFriendLabel"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0" />
-
-    <TextView
         android:id="@+id/addFriendLabel"
         android:layout_width="202dp"
         android:layout_height="30dp"
         android:layout_marginStart="16dp"
+        android:layout_marginTop="28dp"
         android:layout_marginEnd="16dp"
-        android:layout_marginBottom="68dp"
         android:gravity="center"
         android:text="Add Friends"
         android:textSize="20sp"
-        app:layout_constraintBottom_toTopOf="@+id/enterFriendID"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintHorizontal_bias="0.497"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
         android:id="@+id/enterFriendID"
         android:layout_width="wrap_content"
         android:layout_height="0dp"
+        android:layout_marginTop="124dp"
         android:hint="Enter each UID for friends"
-        app:layout_constraintBottom_toTopOf="@+id/addFriendSubmitButton"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/addFriendLabel"
         tools:ignore="TouchTargetSizeCheck" />
 
     <Button
         android:id="@+id/addFriendSubmitButton"
         android:layout_width="wrap_content"
-        android:layout_height="48dp"
-        android:layout_marginBottom="108dp"
+        android:layout_height="52dp"
+        android:layout_marginTop="40dp"
+        android:onClick="onAddFriendSubmitBtnClicked"
         android:text="submit"
         android:textSize="10sp"
-        android:onClick="onAddFriendSubmitBtnClicked"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/enterFriendID"
+        app:layout_constraintVertical_bias="0.0" />
 </androidx.constraintlayout.widget.ConstraintLayout>
