--- a/app/src/main/res/layout/activity_compass.xml
+++ b/app/src/main/res/layout/activity_compass.xml
@@ -118,5 +118,14 @@
             app:layout_constraintEnd_toStartOf="@+id/family"
             app:layout_constraintStart_toEndOf="@+id/family" />
 
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/friends"
+            android:layout_width="415dp"
+            android:layout_height="417dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="@+id/circle"
+            app:layout_constraintTop_toTopOf="parent" />
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
