--- a/app/src/main/res/layout/friend.xml
+++ b/app/src/main/res/layout/friend.xml
@@ -3,12 +3,12 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="64dp">
 
     <TextView
         android:id="@+id/name"
-        android:layout_width="64dp"
-        android:layout_height="64dp"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
         android:layout_row="0"
         android:layout_column="0"
         app:layout_constraintBottom_toBottomOf="parent"
