--- a/app/src/main/res/layout/activity_compass.xml
+++ b/app/src/main/res/layout/activity_compass.xml
@@ -118,5 +118,14 @@
             app:layout_constraintEnd_toStartOf="@+id/family"
             app:layout_constraintStart_toEndOf="@+id/family" />
 
+        <TextView
+            android:id="@+id/textView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="diffTime"
+            tools:layout_editor_absoluteX="335dp"
+            tools:layout_editor_absoluteY="25dp"
+            tools:ignore="MissingConstraints" />
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
