--- a/app/src/main/res/layout/activity_compass.xml
+++ b/app/src/main/res/layout/activity_compass.xml
@@ -119,13 +119,28 @@
             app:layout_constraintStart_toEndOf="@+id/family" />
 
         <TextView
-            android:id="@+id/textView"
+            android:id="@+id/timeDisconnect"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="diffTime"
             tools:layout_editor_absoluteX="335dp"
             tools:layout_editor_absoluteY="25dp"
             tools:ignore="MissingConstraints" />
+
+        <ImageView
+            android:id="@+id/redDot"
+            android:layout_width="35dp"
+            android:layout_height="35dp"
+            tools:ignore="MissingConstraints"
+            tools:layout_editor_absoluteX="10dp"
+            tools:layout_editor_absoluteY="44dp" />
+
+        <ImageView
+            android:id="@+id/greenDot"
+            android:layout_width="26dp"
+            android:layout_height="27dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:srcCompat="@drawable/green_dot" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
