added some more stuff

--- a/app/src/main/res/layout/activity_send_uid.xml
+++ b/app/src/main/res/layout/activity_send_uid.xml
@@ -59,8 +59,8 @@
         android:id="@+id/nextPage"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Next"
-        android:onClick="onNextBtnClicked"
+        android:onClick="onContinueBtnClicked"
+        android:text="continue"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
